tests/__snapshots__/api-toBeNever.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeNever: stderr 1`] = `
"Error: The source type is 'string'.

   7 |   expect(returnsNever()).type.toBeNever();
   8 | 
>  9 |   expect(returnsString()).type.toBeNever();
     |                                ^
  10 | });
  11 | 
  12 | test("is NOT never?", () => {

       at ./__typetests__/toBeNever.tst.ts:9:32 ❭ is never?

Error: The source type is 'never'.

  13 |   expect(returnsString()).type.not.toBeNever();
  14 | 
> 15 |   expect(returnsNever()).type.not.toBeNever();
     |                                   ^
  16 | });
  17 | 

       at ./__typetests__/toBeNever.tst.ts:15:35 ❭ is NOT never?

"
`;

exports[`toBeNever: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeNever.tst.ts
  × is never?
  × is NOT never?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
